# lightscript-lang

./: COMPLETION_REPORT.md  Cargo.toml  IR_CODEGEN_PROGRESS.md  MERGE_COMPLETE.md  PARSER_FINAL_REPORT.md  PARSER_PROGRESS.md  PROGRESS.md  QUICK_START.md  README.md  RENAME_COMPLETE.md  STATUS.md  TASK_PROGRESS.md  TASK_SUMMARY.md  WIP_FUNCTIONS_PROGRESS.md  test_arm64  test_result
.github/workflows/: ci.yml
crates/ziv-stdlib/: Cargo.toml
crates/ziv-stdlib/src/: array.rs  container.rs  crypto.rs  encoding.rs  filesystem.rs  io.rs  js.rs  lib.rs  math.rs  net.rs  string.rs
docs/: LANGUAGE_SPEC.md  QUICK_START.md  STDLIB_API.md  SYNTAX_TUTORIAL.md
docs/zh-CN/: README.md  STDLIB_API.md  STDLIB_GUIDE.md  SYNTAX_TUTORIAL.md
examples/: demo.rs  fib_func.ll  fib_recursive.ll  test_arm64.ll
examples/from_import/: advanced_ops.ziv  full_demo.ziv  math_ops.ziv
examples/function/: function_arg_demo.ziv
examples/stdlib/: array_demo.ziv  container_demo.ziv  crypto_demo.ziv  encoding_demo.ziv  filesystem_demo.ziv  hello.ziv  io_demo.ziv  js_demo.ziv  math_demo.ziv  net_demo.ziv  string_demo.ziv
examples/struct/: struct_demo.ziv  struct_func_demo.ziv
src/: compiler.rs  lib.rs  main.rs
src/codegen/: arm64.rs  llvm_text.rs  mod.rs  x86_64.rs
src/codegen/cranelift/: mod.rs
src/ir/: builder.rs  instructions.rs  mod.rs
src/lexer/: mod.rs
src/parser/: ast.rs  mod.rs
src/semantic/: mod.rs  symbols.rs  type_checker.rs  types.rs
src/stdlib/: array.rs  io.rs  math.rs  mod.rs  string.rs
tests/: cranelift_tests.rs  integration_tests.rs  stdlib_examples_tests.rs  stdlib_functional_tests.rs
