[package]
name = "lightscript-lang"
version = "0.1.0"
edition = "2021"
authors = ["Zayfen <zayfen@example.com>"]
description = "A modern language inspired by JavaScript's best features, compiled with LLVM"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zayfen/lightscript-lang"
readme = "README.md"
keywords = ["language", "compiler", "javascript", "llvm", "rust"]
categories = ["compilers", "development-tools"]

[dependencies]
# Lexer generator
lalrpop-util = "0.20"
regex = "1.10"

# LLVM bindings
inkwell = { version = "0.4", features = ["llvm15-0"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
miette = { version = "7.2", features = ["fancy"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
# Testing
proptest = "1.4"
criterion = "0.5"
insta = "1.34"
tempfile = "3.10"

[[bench]]
name = "compiler_bench"
harness = false

[profile.release]
opt-level = 3
lto = true

[lib]
name = "lightscript"
path = "src/lib.rs"

[[bin]]
name = "lsc"
path = "src/main.rs"
