[package]
name = "lightlang"
version = "0.1.0"
edition = "2021"
authors = ["Zayfen <zayfen@example.com>"]
description = "A modern systems programming language that compiles to native ELF executables"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zayfen/lightlang"
readme = "README.md"
keywords = ["language", "compiler", "systems", "llvm", "elf"]
categories = ["compilers", "development-tools", "systems-programming"]

[dependencies]
# Lexer generator
logos = "0.14"

# Parser generator
lalrpop-util = "0.20"
regex = "1.10"

# LLVM bindings
inkwell = { version = "0.4", features = ["llvm15-0"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"
miette = { version = "7.2", features = ["fancy"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# ELF manipulation
goblin = "0.8"
scroll = "0.12"

# Linker
linker = "0.1"

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
# Testing
proptest = "1.4"
criterion = "0.5"
insta = "1.34"
tempfile = "3.10"


[profile.release]
opt-level = 3
lto = true

[lib]
name = "lightlang"
path = "src/lib.rs"

[[bin]]
name = "llc"
path = "src/main.rs"
